fixed new names for vertical align

--- a/app/public/css/l_d_utilities.css
+++ b/app/public/css/l_d_utilities.css
@@ -1,26 +1,26 @@
 /*  alignment section: align and justify contained in classes */
-.va-baseline {
+.vertical-align--baseline {
   vertical-align: baseline !important;
 }
-.va-sub {
+.vertical-align--sub {
   vertical-align: sub !important;
 }
-.va-super {
+.vertical-align--super {
   vertical-align: super !important;
 }
-.va-top {
+.vertical-align--top {
   vertical-align: top !important;
 }
-.va-middle {
+.vertical-align--middle {
   vertical-align: middle !important;
 }
-.va-bottom {
+.vertical-align--bottom {
   vertical-align: bottom !important;
 }
-.va-text-bottom {
+.vertical-align--text-bottom {
   vertical-align: text-bottom !important;
 }
-.va-text-top {
+.vertical-align--text-top {
   vertical-align: text-top !important;
 }
 
